# Multi_Agentic_AI

./: .exampl_env  README.md  app.py  pyproject.toml  requirements.txt  setup.py
agents/: __init__.py
agents/api_query/: graph.py
agents/audit/: __init__.py  graph.py
agents/communication/: README.md  graph.py
agents/email_handler/: graph.py
agents/execution/: graph.py
agents/generator/: graph.py
agents/hitl/: README.md  __init__.py  graph.py
agents/intent/: graph.py
agents/mcp_invoker/: graph.py
agents/notification/: graph.py
agents/pdf_ingestor/: graph.py
agents/planner/: graph.py
agents/reasoning/: graph.py
agents/router/: graph.py
agents/salesforce/: graph.py
agents/sap/: graph.py
agents/scheduling/: graph.py
agents/sql/: graph.py
agents/translation/: graph.py
agents/vector_query/: graph.py
agents/workflow/: graph.py
orchestration/: README.md  __init__.py  auto_orchestrator.py  pipeline.py
orchestration/use_cases/: __init__.py  content_generation.py  incident_response.py  invoice_to_pay.py  uc1_sales_intelligence.py  uc2_employee_onboarding.py  uc3_procurement_exception.py  uc4_customer_support_desk.py  uc5_market_research_proposal.py
shared/: __init__.py  _core_utils.py  langfuse_manager.py  llm_factory.py  state.py  utils.py
shared/agents/: __init__.py  base_agent.py
shared/common/: __init__.py
shared/guardrails/: __init__.py  base_guardrail.py
shared/utils/: __init__.py  decorators.py  helpers.py  logger.py
test_agents/comm_use_case_1/: agent_config.yaml  run_uc1.py  (+1 more)
tests/: test_pipeline.py
(+644 files in other folders)
